--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center">
         <div class="col-md-6 order-2 order-md-1">
-          <img src="E:\Web development\Bootstrap4_Code\13_Museum_Of_Candy\Starter\imgs\milk.png">
+          <img src="milk.png">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
          <div class="row justify-content-center">
