--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
          </div>
         <div class="col-lg-6">
-          <img class="img-fluid"src="E:\Web development\Bootstrap4_Code\13_Museum_Of_Candy\Starter\imgs\hand2.png">
+          <img class="img-fluid"src="hand2.png">
         </div>
 
       </div>
