--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center">
         <div class="col-md-6 order-2 order-md-1">
-          <img src="milk.png">
+          <img src="milk.png" class="d-none d-lg-inline">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
          <div class="row justify-content-center">
@@ -87,7 +87,7 @@
          <div class="row justify-content-center">
           <div class="col-10 col-8-lg">
                   <h2>MUSEUM OF CANDY</h2>
-              <img src="E:\Web development\Bootstrap4_Code\13_Museum_Of_Candy\Starter\imgs\lolli_icon.png " class="d-none d-lg-inline">
+              <img src="milk.png " class="d-none d-lg-inline">
               <p class="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
