--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="col-md-6 ">
           
-          <img src="gumball.png""img-fluid">
+          <img src="https://images.unsplash.com/photo-1575224300306-1b8da36134ec?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80""img-fluid">
           
         </div>
 
